Final commit for November 28, 2018.  Fixes div visibility toggle in scripts and clears forms on new survey.

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,4 +1,4 @@
-#formB, #resetForNew {
+#formB, #endDiv {
   display: none;
 }
 
